Changes to be committed:

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <title>Site pessoal de Devid</title>
     </head>
     <body>
+                     
+                <!--Cabeçalho da página-->
 
         <header>
             <img src="assets/WhatsApp Image 2024-04-12 at 1.57.59 PM.jpeg" alt="Foto de Devid">
