--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <header>
             <img src="assets/WhatsApp Image 2024-04-12 at 1.57.59 PM.jpeg" alt="Foto de Devid">
             <h1>Devid Matheus</h1>
-            <h3>Licenciando Matemática</h3>
+            <h3>Licenciando Matemática.</h3>
         </header>
-
+                <!--Cabeçalho acaba aqui.-->
         <nav>
             <ul>
                 <li class="button"><a href="#">Currículo</a></li>
