fix:erro ortográfico

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Devid Matheus</h1>
             <h3>Licenciando Matemática.</h3>
         </header>
-                <!--Cabeçalho acaba aqui.-->
+                <!--Cabeçalho acaba aqui....-->
         <nav>
             <ul>
                 <li class="button"><a href="#">Currículo</a></li>
@@ -33,7 +33,7 @@
         <h2>Resumo</h2>
             <p>Nome:Devid Matheus Nascimento Silva.
              <p>Escolaridade completa, cursando licenciatura em Matemática,
-                cursando programação pela Usina Academy e disposto a resolver o seu prblema.</p>
+                cursando programação pela Usina Academy e disposto a resolver o seu problema.</p>
          </p>
         </section>
 
